# LightMCP

./: .gitignore  .ruff.toml  CLAUDE.md  README.md  debug_mcp_content_format.py  debug_mcp_content_types.py  debug_mcp_return_format.py  debug_mcp_signature.py  debug_mcp_simple.py  debug_mcp_uri.py  debug_streaming_registration.py  phase2_1_2_summary.md  phase2_1_3_streaming_design.py  phase2_1_binary_resource_research.py  pyproject.toml  test_binary_resources.py  test_complete_functionality.py  test_complete_mcp_protocol.py  test_container_type_enhancement.py  test_container_validation.py  test_current_type_limitations.py  test_enhanced_error_handling.py  test_mcp_simple.py  test_mcp_with_enhanced_errors.py  test_streaming_resources.py  test_streaming_simple.py  test_toolkit_mcp.py  type_system_research.py
examples/: basic_server.py  complete_mcp_example.py  developer_toolkit.py
src/lightmcp/: __init__.py  app.py  exceptions.py
tests/: __init__.py  test_app.py  test_e2e_dual_protocol.py  test_e2e_http.py  test_e2e_mcp.py  test_validation_and_errors.py
